--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,4 +17,23 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+
+  .scrollbar::-webkit-scrollbar {
+    width: 6px;
+    height: 12px;
+  }
+
+  .scrollbar::-webkit-scrollbar-track {
+    border-radius: 100vh;
+    background: rgba(50,50,50,0.5);
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    background: rgba(255,255,255,1);
+    border-radius: 100vh;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    background: rgba(200,200,200,1);
+  }
 }
